packages/agent_dart/macos/Classes/frb.h

#define ECB 0
#define CBC 1
#define CFB1 2
#define CFB2 3
#define CFB4 5
#define OFB1 14
#define OFB2 15
#define OFB4 17
#define OFB8 21
#define OFB16 29
#define CTR1 30
#define CTR2 31
#define CTR4 33
#define CTR8 37
#define CTR16 45
#define CHUNK 64
#define MODBYTES 48
#define BASEBITS 58
#define NLEN (1 + (((8 * MODBYTES) - 1) / BASEBITS))
#define DNLEN (2 * NLEN)
#define HBITS (BASEBITS / 2)
#define BIGBITS (MODBYTES * 8)
#define BLS_OK 0
#define BLS_FAIL -1
#define WEIERSTRASS 0
#define EDWARDS 1
#define MONTGOMERY 2
#define NOT 0
#define BN 1
#define BLS12 2
#define BLS24 3
#define BLS48 4
#define D_TYPE 0
#define M_TYPE 1
#define POSITIVEX 0
#define NEGATIVEX 1
#define CURVETYPE WEIERSTRASS
#define CURVE_A 0
#define CURVE_PAIRING_TYPE BLS12
#define SEXTIC_TWIST M_TYPE
#define SIGN_OF_X NEGATIVEX
#define ATE_BITS 65
#define G2_TABLE 69
#define HTC_ISO 11
#define HTC_ISO_G2 3
#define ALLOW_ALT_COMPRESS true
#define HASH_TYPE 32
#define AESKEY 16
#define NOT_SPECIAL 0
#define PSEUDO_MERSENNE 1
#define MONTGOMERY_FRIENDLY 2
#define GENERALISED_MERSENNE 3
#define NEGATOWER 0
#define POSITOWER 1
#define MODBITS 381
#define PM1D2 1
#define RIADZ 11
#define RIADZG2A -2
#define RIADZG2B -1
#define MODTYPE NOT_SPECIAL
#define QNRI 0
#define TOWER NEGATOWER
#define FEXCESS (((int32_t)1 << 25) - 1)
#define BIG_ENDIAN_SIGN false
#define ZERO 0
#define ONE 1
#define SPARSEST 2
#define SPARSER 3
#define SPARSE 4
#define DENSE 5
#define BAD_PARAMS -11
#define INVALID_POINT -14
#define WRONG_ORDER -18
#define BAD_PIN -19
#define SHA256 32
#define SHA384 48
#define SHA512 64
#define MAXPIN 10000
#define PBLEN 14
#define CURVE_COF_I 0
#define CURVE_B_I 4
#define USE_GLV true
#define USE_GS_G2 true
#define USE_GS_GT true
#define GT_STRONG false
#define MC_SHA2 2
#define MC_SHA3 3
#define HASH224 28
#define HASH256 32
#define HASH384 48
#define HASH512 64
#define SHAKE128 16
#define SHAKE256 32
#define KEY_LENGTH 32
#define KEY_LENGTH_AES (KEY_LENGTH / 2)
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_PsbtWalletReq {
  struct wire_uint_8_list *prv;
  struct wire_uint_8_list *address_type;
  struct wire_uint_8_list *network;
} wire_PsbtWalletReq;
typedef struct wire_ScriptAmount {
  struct wire_uint_8_list *script;
  uint64_t amount;
} wire_ScriptAmount;
typedef struct wire_list_script_amount {
  struct wire_ScriptAmount *ptr;
  int32_t len;
} wire_list_script_amount;
typedef struct wire_OutPoint {
  struct wire_uint_8_list *txid;
  uint32_t vout;
} wire_OutPoint;
typedef struct wire_list_out_point {
  struct wire_OutPoint *ptr;
  int32_t len;
} wire_list_out_point;
typedef struct wire_TxBulderReq {
  struct wire_PsbtWalletReq wallet_req;
  struct wire_list_script_amount *recipients;
  struct wire_list_out_point *utxos;
  struct wire_list_out_point *unspendable;
  bool manually_selected_only;
  bool only_spend_change;
  bool do_not_spend_change;
  float *fee_rate;
  uint64_t *fee_absolute;
  bool drain_wallet;
  struct wire_uint_8_list *drain_to;
  bool enable_rbf;
  uint32_t *n_sequence;
  struct wire_uint_8_list *data;
} wire_TxBulderReq;
typedef struct wire_AddressIndex_New {

} wire_AddressIndex_New;
typedef struct wire_AddressIndex_LastUnused {

} wire_AddressIndex_LastUnused;
typedef struct wire_AddressIndex_Peek {
  uint32_t index;
} wire_AddressIndex_Peek;
typedef union AddressIndexKind {
  struct wire_AddressIndex_New *New;
  struct wire_AddressIndex_LastUnused *LastUnused;
  struct wire_AddressIndex_Peek *Peek;
} AddressIndexKind;
typedef struct wire_AddressIndex {
  int32_t tag;
  union AddressIndexKind *kind;
} wire_AddressIndex;
#define BMASK ((1 << BASEBITS) - 1)
#define HMASK ((1 << HBITS) - 1)
#define MCONST 140737475470229501