packages/agent_dart_ffi/lib/src/bridge_generated.io.dart


class wire_list_script_amount extends ffi.Struct {
  external ffi.Pointer<wire_ScriptAmount> ptr;

  @ffi.Int32()
  external int len;
}

class wire_OutPoint extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> txid;

  @ffi.Uint32()
  external int vout;
}

class wire_list_out_point extends ffi.Struct {
  external ffi.Pointer<wire_OutPoint> ptr;

  @ffi.Int32()
  external int len;
}

class wire_TxBulderReq extends ffi.Struct {
  external wire_PsbtWalletReq wallet_req;

  external ffi.Pointer<wire_list_script_amount> recipients;

  external ffi.Pointer<wire_list_out_point> utxos;

  external ffi.Pointer<wire_list_out_point> unspendable;

  @ffi.Bool()
  external bool manually_selected_only;

  @ffi.Bool()
  external bool only_spend_change;

  @ffi.Bool()
  external bool do_not_spend_change;

  external ffi.Pointer<ffi.Float> fee_rate;

  external ffi.Pointer<ffi.Uint64> fee_absolute;

  @ffi.Bool()
  external bool drain_wallet;

  external ffi.Pointer<wire_uint_8_list> drain_to;

  @ffi.Bool()
  external bool enable_rbf;

  external ffi.Pointer<ffi.Uint32> n_sequence;

  external ffi.Pointer<wire_uint_8_list> data;
}

class wire_AddressIndex_New extends ffi.Opaque {}

class wire_AddressIndex_LastUnused extends ffi.Opaque {}

class wire_AddressIndex_Peek extends ffi.Struct {
  @ffi.Uint32()
  external int index;
}

class AddressIndexKind extends ffi.Union {
  external ffi.Pointer<wire_AddressIndex_New> New;

  external ffi.Pointer<wire_AddressIndex_LastUnused> LastUnused;

  external ffi.Pointer<wire_AddressIndex_Peek> Peek;
}

class wire_AddressIndex extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<AddressIndexKind> kind;
}

typedef DartPostCObjectFnType = ffi.Pointer<ffi.NativeFunction<ffi.Bool Function(DartPort, ffi.Pointer<ffi.Void>)>>;
typedef DartPort = ffi.Int64;

const int ECB = 0;

const int CBC = 1;

const int CFB1 = 2;

const int CFB2 = 3;

const int CFB4 = 5;

const int OFB1 = 14;

const int OFB2 = 15;

const int OFB4 = 17;

const int OFB8 = 21;

const int OFB16 = 29;

const int CTR1 = 30;

const int CTR2 = 31;

const int CTR4 = 33;

const int CTR8 = 37;

const int CTR16 = 45;

const int CHUNK = 64;

const int MODBYTES = 48;

const int BASEBITS = 58;

const int NLEN = 7;

const int DNLEN = 14;

const int HBITS = 29;

const int BIGBITS = 384;

const int BLS_OK = 0;

const int BLS_FAIL = -1;

const int WEIERSTRASS = 0;

const int EDWARDS = 1;

const int MONTGOMERY = 2;

const int NOT = 0;

const int BN = 1;

const int BLS12 = 2;

const int BLS24 = 3;

const int BLS48 = 4;

const int D_TYPE = 0;

const int M_TYPE = 1;

const int POSITIVEX = 0;

const int NEGATIVEX = 1;

const int CURVETYPE = 0;

const int CURVE_A = 0;

const int CURVE_PAIRING_TYPE = 2;

const int SEXTIC_TWIST = 1;

const int SIGN_OF_X = 1;

const int ATE_BITS = 65;

const int G2_TABLE = 69;

const int HTC_ISO = 11;

const int HTC_ISO_G2 = 3;

const int ALLOW_ALT_COMPRESS = 1;

const int HASH_TYPE = 32;

const int AESKEY = 16;

const int NOT_SPECIAL = 0;

const int PSEUDO_MERSENNE = 1;

const int MONTGOMERY_FRIENDLY = 2;

const int GENERALISED_MERSENNE = 3;

const int NEGATOWER = 0;

const int POSITOWER = 1;

const int MODBITS = 381;

const int PM1D2 = 1;

const int RIADZ = 11;

const int RIADZG2A = -2;

const int RIADZG2B = -1;

const int MODTYPE = 0;

const int QNRI = 0;

const int TOWER = 0;

const int FEXCESS = 33554431;

const int BIG_ENDIAN_SIGN = 0;

const int ZERO = 0;

const int ONE = 1;

const int SPARSEST = 2;

const int SPARSER = 3;

const int SPARSE = 4;

const int DENSE = 5;

const int BAD_PARAMS = -11;

const int INVALID_POINT = -14;

const int WRONG_ORDER = -18;

const int BAD_PIN = -19;

const int SHA256 = 32;

const int SHA384 = 48;

const int SHA512 = 64;

const int MAXPIN = 10000;

const int PBLEN = 14;

const int CURVE_COF_I = 0;

const int CURVE_B_I = 4;

const int USE_GLV = 1;

const int USE_GS_G2 = 1;

const int USE_GS_GT = 1;

const int GT_STRONG = 0;

const int MC_SHA2 = 2;

const int MC_SHA3 = 3;

const int HASH224 = 28;

const int HASH256 = 32;

const int HASH384 = 48;

const int HASH512 = 64;

const int SHAKE128 = 16;

const int SHAKE256 = 32;

const int KEY_LENGTH = 32;

const int KEY_LENGTH_AES = 16;

const int BMASK = 2147483647;

const int HMASK = 536870911;

const int MCONST = 140737475470229501;
